--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,79 @@
-robotframework
-robotframework-seleniumlibrary
-schedule
-yagmail
-Pillow
-pyautogui
-load_dotenv
+appdirs==1.4.4
+attrs==23.2.0
+beautifulsoup4==4.12.3
+behave==1.2.6
+cachetools==5.3.3
+certifi==2024.2.2
+chardet==5.2.0
+charset-normalizer==3.3.2
+colorama==0.4.6
+cssselect==1.2.0
+cssutils==2.11.0
+exceptiongroup==1.2.1
+execnet==2.1.1
+fasteners==0.19
+filelock==3.14.0
+h11==0.14.0
+idna==3.7
+iniconfig==2.0.0
+load-dotenv==0.1.0
+lxml==5.2.2
+markdown-it-py==3.0.0
+mdurl==0.1.2
+MouseInfo==0.1.3
+outcome==1.3.0.post0
+packaging==24.0
+parameterized==0.9.0
+parse==1.20.1
+parse-type==0.6.2
+pdbp==1.5.0
+pillow==10.3.0
+platformdirs==4.2.2
+pluggy==1.5.0
+premailer==3.10.0
+py==1.11.0
+PyAutoGUI==0.9.54
+PyGetWindow==0.0.9
+Pygments==2.18.0
+PyMsgBox==1.0.9
+pynose==1.5.1
+pyobjc-core==10.3
+pyobjc-framework-Cocoa==10.3
+pyobjc-framework-Quartz==10.3
+pyotp==2.9.0
+pyperclip==1.8.2
+PyRect==0.2.0
+PyScreeze==0.1.30
+PySocks==1.7.1
+pytesseract==0.3.10
+pytest==8.2.0
+pytest-html==2.0.1
+pytest-metadata==3.1.1
+pytest-ordering==0.6
+pytest-rerunfailures==14.0
+pytest-xdist==3.6.1
+python-dotenv==1.0.1
+pytweening==1.2.0
+PyYAML==6.0.1
+requests==2.31.0
+rich==13.7.1
+robotframework==7.0
+robotframework-pythonlibcore==4.4.1
+robotframework-seleniumlibrary==6.4.0
+rubicon-objc==0.4.9
+sbvirtualdisplay==1.3.0
+schedule==1.2.2
+selenium==4.21.0
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.5
+tabcompleter==1.3.0
+tomli==2.0.1
+tqdm==4.66.4
+trio==0.25.1
+trio-websocket==0.11.1
+typing_extensions==4.12.0
+urllib3==1.26.18
+webdrivermanager==0.10.0
+wsproto==1.2.0
