--- a/.github/workflows/rpa_workflow_for_mac.yml
+++ b/.github/workflows/rpa_workflow_for_mac.yml
@@ -39,4 +39,4 @@ jobs:
       run: |
         pwd
         cd Test
-        venv/bin/robot --pythonpath . cara.robot
+        robot --pythonpath . cara.robot
