--- a/.github/workflows/rpa_workflow_for_windows.yml
+++ b/.github/workflows/rpa_workflow_for_windows.yml
@@ -28,7 +28,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python3 -m pip install --upgrade pip
+        py -m pip install --upgrade setuptools wheel
         pip install -r requirements.txt
 
     - name: Run Robot Framework tests
