--- a/.github/workflows/rpa_workflow_for_windows.yml
+++ b/.github/workflows/rpa_workflow_for_windows.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python3 -m pip install --upgrade pip
+        py -m pip install --upgrade pip
         py -m pip install --upgrade setuptools wheel
         pip install -r requirements.txt
 
