--- a/.github/workflows/rpa_workflow_for_windows.yml
+++ b/.github/workflows/rpa_workflow_for_windows.yml
@@ -33,5 +33,4 @@ jobs:
 
     - name: Run Robot Framework tests
       run: |
-        cd Test
-        robot --pythonpath . cara.robot
+        robot --pythonpath . Test/cara.robot
