--- a/.github/workflows/rpa_workflow_for_windows.yml
+++ b/.github/workflows/rpa_workflow_for_windows.yml
@@ -33,4 +33,5 @@ jobs:
 
     - name: Run Robot Framework tests
       run: |
+        SET PYTHONPATH=$PWD
         robot --pythonpath . Test/cara.robot
