--- a/.github/workflows/rpa_workflow_for_windows.yml
+++ b/.github/workflows/rpa_workflow_for_windows.yml
@@ -29,9 +29,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r req.txt
+        python -m pip install -r requirements.txt
 
     - name: Run Robot Framework tests
       run: |
-        SET PYTHONPATH=$PWD
-        robot --pythonpath . Test/cara.robot
+        python -m robot .\Test\cara.robot
